syntax = "proto3";

package tensorflow.Source.lm.ngram;

message ProbTrieProto {
    Node root = 1;
}

message Node {
    double pseudo_prob = 1;
    double backoff = 2;

    message Child {
        int32 id = 1;
        Node node = 2;
    }
    repeated Child child = 3;
}
